# Pockels-Efield-Mapper

./: .gitignore  Efield_compute.py  Efield_compute_10mm.py  README.md  TODO.md  app.py  app2.py  compute_efield_page.py  image_cropper.py  image_process.py  main.py  plotting_modules.py  png_analysis.py  process_image_page.py  processed_efields.py  processed_efields_page.py  pyproject.toml  readme_page.py  requirements.txt  requirements_simple.txt  utils.py
SAMPLE_DATA/42AF25_BKP8_REVERSE-Bias_2025-04-29_A/IV_data/: pockels_current_readings.csv
config/: CZT_10mm.toml  CZT_10mm.yaml  CZT_XMED.yaml  XMED.toml  config.toml  pockels_parameters.toml
modules/: image_process.py  pockels_math.py
