[project]
name = "pockels-efield-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "scipy>=1.16.0",
    "streamlit>=1.46.0",
    "streamlit-pdf-viewer>=0.0.24",
]
